[tool.poetry]
name = "crop-test"
version = "0.1.0"
description = ""
authors = ["Blake Passe <blakepasse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
